# M5Stack-Tab5

./: README.md  README_CN.md
Game/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
Game/main/: Blur.c  CMakeLists.txt  Container.c  Floating_Tetrominoe.c  game_controller.c  game_controller.h  idf_component.yml  input_events.h  input_uart.c  input_uart.h  main.c  tetris_engine.c  tetris_engine.h  tetris_view.c  tetris_view.h  uart_mgr.c  uart_mgr.h  ui_game.c  ui_game.h  ui_home.c  ui_home.h
Terminal/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.bsp.m5stack_tab5  sdkconfig.defaults  sdkconfig.old
Terminal/main/: CMakeLists.txt  ble_mgr.c  espnow_mgr.c  idf_component.yml  lvgl_demo_ui.c.bak  main.c  page3.css  uart_mgr.c  uart_mgr.h  ui_common.h  ui_page1.c  ui_page2.c  ui_page3.c  ui_page4.c  ui_page5.c  wireless_mgr.c  wireless_mgr.h
Terminal/main/fonts/: font_inter_bold_10.c  font_inter_bold_13.c  font_inter_bold_14.c  font_inter_bold_24.c  font_inter_bold_32.c  font_inter_bold_48.c  font_inter_light_14.c  font_inter_medium_10.c  font_inter_regular_12.c  font_inter_regular_14.c  font_inter_regular_16.c  font_inter_regular_20.c  font_inter_regular_24.c  font_inter_regular_32.c
Terminal/main/images/: arrow_blue.c  arrow_orange.c  bluetooth.c  bluetooth_logo.c  choose_gif.c  espnow.c  finder.c  logo_espnow.c  node.c
